# roadmap-sh-django

./: .env.example  .gitignore  pyproject.toml
config/: log_formatters.py  settings.py  urls.py
docs/: 01-manage-py-and-urls.md  02-models-views-tests-admin-migrations.md  03-templates-static-media.md  04-creating-project-and-dev-server.md  05-request-response-and-routing.md
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_question_cover_image.py
polls/static/polls/: style.css
polls/templates/polls/: _question_item.html  base.html  detail.html  index.html  results.html
todo/: models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/todo/: list.html
