[project]
name = "roadmap-sh-django"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-extensions>=4.1",
    "mysqlclient>=2.2.8",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "pygments>=2.18.0",
    "werkzeug>=3.1.8",
]
